# BootCamp2025_cpp_tasks

./: .gitignore  CMakeLists.txt  README.md
1_HelloWorld/: HelloWorld.cpp
2_csv_Input/: CsvInput.cpp
3_csv_Output/: CsvOutput.cpp  crlserial2025.hpp
4_LPF/: ApplyLowPassFilter.cpp  LPF.csv  LowPassFilter.cpp  LowPassFilter.h  LowPassFilter.hpp
assets/: LPF.csv
